# gitcc

./: CHANGELOG.md  CLOG_TEST.md  Cargo.toml  README.md  RELEASE_NOTES.md
.cargo/: config.toml
.gitcc/: config.toml
.repo/: config.toml
_old/src/: config.rs  conventional.rs
_old/src/git/commands/: commit.rs  config.rs
gitcc-changelog/: Cargo.toml
gitcc-changelog/src/: lib.rs
gitcc-changelog/src/tpl/: changelog.hbs  release.hbs
gitcc-changelog/tests/: gen.rs
gitcc-cli/: Cargo.toml
gitcc-cli/src/: changelog.rs  commit.rs  config.rs  init.rs  lib.rs  log.rs  release.rs  util.rs  version.rs
gitcc-convco/: Cargo.toml
gitcc-convco/src/: lib.rs  util.rs
gitcc-convco/tests/: assemble.rs  parse.rs
gitcc-convco/tests/files/: ex_1.txt  ex_3.txt  ex_4.txt  ex_5.txt  ex_6.txt
gitcc-core/: Cargo.toml
gitcc-core/src/: changelog.rs  commit.rs  config.rs  error.rs  lib.rs  release.rs
gitcc-git/: Cargo.toml
gitcc-git/src/: commit.rs  config.rs  error.rs  index.rs  lib.rs  remote.rs  repo.rs  status.rs  tag.rs  util.rs
src/: changelog.rs  cmd.rs  commit.rs  config.rs  conv.rs  git.rs  hook.rs  hooks.rs  lib.rs  release.rs  util.rs
src/cmd/: changelog.rs  commit.rs  init.rs  install_hooks.rs  lint_commit.rs  release.rs  version.rs
