[package]
name = "repo-tools"
version = "0.0.17"
edition = "2021"
description = "Repo tooling"
repository = "https://github.com/nlargueze/repo"
publish = false

[dependencies]
anyhow = "1.0.64"

clap = { version = "3.2.20", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.2"
handlebars = "4.3.3"
heck = "0.4.0"
indexmap = { version = "1.9.1", features = ["serde"] }
indoc = "1.0.7"
regex = "1.6.0"
semver = { version = "1.0.13", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
time = { version = "0.3.14", features = [
    "serde",
    "parsing",
    "formatting",
    "macros",
] }
toml = "0.5.9"
