[package]
name = "git-cc-cli"
version = "0.1.2"
edition = "2021"
description = "Git extension(s) for conventional commits"
repository = "https://github.com/nlargueze/git-cc-cli"

[dependencies]
anyhow = "1.0.64"
clap = { version = "4.2.5", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.2"
handlebars = "4.3.3"
heck = "0.4.0"
indexmap = { version = "1.9.1", features = ["serde"] }
indoc = "2.0.1"
regex = "1.6.0"
semver = { version = "1.0.13", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
time = { version = "0.3.14", features = [
    "serde",
    "parsing",
    "formatting",
    "macros",
] }
toml = "0.7.3"
