[package]
name = "gitcc-changelog"
version = "0.4.0"
edition = "2021"
description = "Changelog utilities for gitcc-cli"
license = "MIT"
repository = "https://github.com/nlargueze/gitcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.6"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
time = { version = "0.3.20", features = ["macros", "formatting"] }
