[package]
name = "gitcc-convco"
version = "0.2.0"
edition = "2021"
description = "Utilities for conventional commits"
license = "MIT"
repository = "https://github.com/nlargueze/gitcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.3"
lazy_static = "1.4.0"
regex = "1.8.1"
thiserror = "1.0.40"
