[package]
name = "gitcc-git"
version = "0.4.0"
edition = "2021"
description = "Git utilities for gitcc-cli"
license = "MIT"
repository = "https://github.com/nlargueze/gitcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.1"
thiserror = "1.0.40"
time = "0.3.20"
